# lattice-dirac-spectra

./: .gitignore  DESIGN_BLUEPRINT.md  README.md  pyproject.toml
core/lattice_dirac_spectra/: __init__.py
core/lattice_dirac_spectra/constants/: __init__.py  operators.py  paths.py  physics.py  visualization.py
core/lattice_dirac_spectra/gauge/: __init__.py  covariant.py  observables.py  smearing.py  synthetic.py  u1_config.py
core/lattice_dirac_spectra/operators/: __init__.py  dirac.py  fourier.py  gamma.py  overlap.py  stencils.py
core/lattice_dirac_spectra/spectra/: __init__.py  free_field.py  gauged.py
core/lattice_dirac_spectra/utils/: __init__.py  helpers.py  logging_utilities.py
core/lattice_dirac_spectra/visualization/: __init__.py  brillouin_zone.py  dispersion.py  spectrum_plotter.py  style.py
core/src/: diagonalize_ensemble.py  plot_brillouin_zone.py  plot_dispersion.py  verify_free_field.py
core/tests/integration_tests/: test_synthetic_backgrounds.py  test_unit_config_roundtrip.py
core/tests/mock_data/: README.md
core/tests/unit_tests/: conftest.py  test_covariant.py  test_fourier_gamma.py  test_free_field_recipe.py  test_gauged.py  test_observables.py  test_overlap.py  test_stencils.py  test_visualization.py
docs/: README.md  project_structure.md
docs/theory/: mock_spectra_theory.md  u1_hmc_data_format.md
examples/: brillouin_zone_surfaces_2d.ipynb  gauged_spectra_2d.ipynb  gauged_spectra_3d_4d.ipynb
notebooks/: Concentration_of_error.ipynb
